text align for stop play buttons

--- a/src/app/home/components/ins-shelf/ins-shelf.component.scss
+++ b/src/app/home/components/ins-shelf/ins-shelf.component.scss
@@ -68,5 +68,6 @@ th {
 .pull-right{
   margin-top: -25px;
   background: darkblue;
+  text-align: center;
 }
 }
